# spatial-database-coursework

./: .gitmodules  CMakeLists.txt  README.md  имена.txt  фамилии.txt
spatialdatabase/: aabb.h  consolewriter.cpp  consolewriter.h  constobjects.cu  constobjects.h  cuda_staff.h  cuda_stuff.cu  database.cpp  database.cu  database.h  database_dropRowAndFilter.cu  database_row_op.cu  database_saveload.cu  date.cpp  date.cu  date.h  error.h  filter.cu  filter.h  float2.h  float3.h  float4.h  gpuallocator.cu  gpuallocator.h  gpudb.cu  gpudb.h  gpustack.cu  gpustack.h  gpustackallocator.cpp  gpustackallocator.h  hlbvh.cu  hlbvh.h  log.cpp  log.h  main.cpp  make_unique.h  result.cpp  result.h  result_impl.h  row.cpp  (+20 more)
