cmake_minimum_required(VERSION 3.0.0)
project(DataBase)
find_package(CUDA QUIET REQUIRED)
find_package(OpenSSL QUIET REQUIRED)

SET(CUDA_SEPARABLE_COMPILATION ON)
include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/externlibs)
include_directories(SYSTEM /opt/cuda/include)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++11 -Wall -Wextra -Wno-unused-function")
list(APPEND CUDA_NVCC_FLAGS "-Xptxas")
list(APPEND CUDA_NVCC_FLAGS " -O3")
list(APPEND CUDA_NVCC_FLAGS "-gencode=arch=compute_30,code=\"compute_30,sm_30\"")
list(APPEND CUDA_NVCC_FLAGS "-gencode=arch=compute_20,code=\"sm_20,compute_20\"")
list(APPEND CUDA_NVCC_FLAGS "--expt-extended-lambda")

file(GLOB_RECURSE SRC_CUDA "spatialdatabase/*.cu")
file(GLOB_RECURSE UTIL_SOURCES "spatialdatabase/*.cpp")
file(GLOB_RECURSE UTIL_HEADERS "spatialdatabase/*.h")
CUDA_ADD_EXECUTABLE(${PROJECT_NAME} ${UTIL_SOURCES} ${UTIL_HEADERS} ${SRC_CUDA})
target_link_libraries(${PROJECT_NAME} ${CUDA_LIBRARIES} ${OPENSSL_LIBRARIES})
